# rendering_thing

./: .gitignore  BUILD.md  CMakeLists.txt  DEPENDENCIES.md  NAMING_CONVENTIONS.md  PROJECT_STRUCTURE.md  TODO.md  build.bat  build.sh  test_display_updates.md
.bmad-core/: install-manifest.yaml
cmake/: FindSDL2.cmake  dependencies.cmake
docs/: architecture.md  brownfield-architecture.md  prd.md  ux.md
docs/architecture/: appendix-gpu-development-commands-and-scripts.md  component_breakdown.md  data-models-and-apis.md  development-and-deployment.md  gpu-enhancement-impact-analysis.md  high-level-architecture.md  high_level_architecture.md  index.md  integration-points-and-external-dependencies.md  introduction.md  quick-reference-key-files-and-entry-points.md  source-tree-and-module-organization.md  technical-debt-and-known-issues.md  technology_stack.md  testing-reality-for-gpu-integration.md
docs/prd/: epics.md  introduction.md  success_metrics.md  technical_requirements.md  timeline_release_plan.md  user_stories.md
docs/stories/: 1.1.cross-platform-build-system.md  1.2.automatic-dependency-management.md  1.3.documented-file-structure.md  2.1.path-tracing-algorithm.md  2.2.camera-position-control.md  2.3.start-stop-rendering-process.md  2.4.progressive-rendering.md  2.5.1.gpu-compute-shader-integration.md  2.5.2.gpu-memory-management.md  2.5.3.gpu-accelerated-path-tracing.md  2.5.4.gpu-performance-optimization.md  2.5.save-rendered-image.md  3.1.add-remove-primitives.md  3.2.continuous-spinning-animation.md
docs/ux/: front_end_specifications.md  project_overview.md  ui_ux_wireframes.md  user_flow.md
include/core/: primitives.h  scene_manager.h
include/performance/: gpu_benchmark.h
include/render/: gpu_compute.h  gpu_hardware_optimizer.h  gpu_memory.h  gpu_performance.h  gpu_rng.h  hybrid_mode_selector.h  image_output.h  path_tracer.h  render_engine.h
include/ui/: ui_input.h  ui_manager.h
src/: CMakeLists.txt  test_gpu_optimization.cpp
src/core/: camera.cpp  camera.h  common.h  path_tracer.cpp  path_tracer.h  primitives.cpp  primitives.h  render_engine.h  scene_manager.cpp  scene_manager.h
src/main/: main.cpp
src/performance/: gpu_benchmark.cpp
src/render/: gpu_compute.cpp  gpu_compute.h  gpu_hardware_optimizer.cpp  gpu_memory.cpp  gpu_memory.h  gpu_performance.cpp  gpu_rng.cpp  gpu_rng.h  hybrid_mode_selector.cpp  image_output.cpp  image_output.h  path_tracer.cpp  path_tracer.h  render_engine.cpp  render_engine.h
src/render/shaders/: ray_tracing.comp
src/ui/: ui_input.cpp  ui_input.h  ui_manager.cpp  ui_manager.h
tests/performance/: gpu_benchmark_test.cpp  gpu_cpu_comparison_test.cpp  gpu_memory_perf_test.cpp  gpu_performance_test.cpp
tests/render/: gpu_accuracy_test.cpp  gpu_compute_test.cpp  gpu_integration_test.cpp  gpu_memory_integration_test.cpp  gpu_memory_test.cpp  gpu_optimization_test.cpp  gpu_path_tracer_test.cpp  gpu_progressive_test.cpp  image_output_progressive_test.cpp  image_save_test.cpp  path_tracer_progressive_test.cpp  progressive_integration_test.cpp  render_engine_test.cpp  render_integration_test.cpp
tests/ui/: ui_manager_progressive_test.cpp  ui_manager_save_test.cpp  ui_manager_test.cpp
